Changed dependencies.
Added Visual Studio 2012 project files.

1
Initial version.