@@ -9,13 +9,17 @@
 
 #include "Env.h"
 
-int main()
+int main(int argc, char* argv[])
 {
+	char szFileInPath[256];
+	char szFileOutPath[256];
+	FILE* filein = NULL;
+	FILE* fileout = NULL;
+	char szTemp[256];
+	char szName[256];
 	double d0 = 0, d1 = 0, d2 = 0, d3 = 0, d4 = 0, d5 = 0, d6 = 0, d7 = 0, d8 = 0, d9 = 0, d10 = 0; 
 	double dt = 0, t0 = 0, t = 0, latmin = 0, longmin = 0, latmax = 0, longmax = 0, altitude = 0;
 	double xmin = 0, ymin = 0, xmax = 0, ymax = 0, z = 0;
-	FILE* logstatefile = NULL;
-	FILE* kmlfile = NULL;
 	char line[4096];
 	unsigned int i = 0;
 	time_t tt;
@@ -29,8 +33,31 @@ int main()
 
 	LoadEnv();
 
-	logstatefile = fopen("logstate.csv", "r");
-	if (logstatefile == NULL)
+	if (argc != 2)
+	{
+		strcpy(szFileInPath, "logstate.csv");
+		printf("Warning : No parameter specified.\n");
+		printf("Usage : LocalBoxes2KML file.csv.\n");
+		printf("Default : LocalBoxes2KML %.255s.\n", szFileInPath);
+	}
+	else
+	{
+		sprintf(szFileInPath, "%.249s", argv[1]);
+	}
+
+	strcpy(szTemp, szFileInPath);
+	RemoveExtensionInFilePath(szTemp);
+	sprintf(szFileOutPath, "%.249s.kml", szTemp);
+	strcpy(szName, szTemp);
+	RemovePathInFilePath(szName);
+
+	printf("Check and change if needed\n\n");
+	printf("Control Panel\\Regional and Language Options\\Customize\\Numbers\n\n");
+	printf("if you do not know if you should use a '.' or a ',' in floating points numbers\n\n");
+	printf("or a ';' or ',' in list separators.\n\n");
+
+	filein = fopen(szFileInPath, "r");
+	if (filein == NULL)
 	{
 		printf("Unable to open csv file.\n");
 #ifdef _DEBUG
@@ -40,11 +67,11 @@ int main()
 		return EXIT_FAILURE;
 	}
 
-	kmlfile = fopen("logstate.kml", "w");
-	if (kmlfile == NULL)
+	fileout = fopen(szFileOutPath, "w");
+	if (fileout == NULL)
 	{
 		printf("Unable to create kml file.\n");
-		fclose(logstatefile);
+		fclose(filein);
 #ifdef _DEBUG
 		fprintf(stdout, "Press ENTER to continue . . . ");
 		(void)getchar();
@@ -54,18 +81,18 @@ int main()
 
 	strcpy(timebuf, "0");
 
-	fprintf(kmlfile, "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n");
-	fprintf(kmlfile, "<kml xmlns=\"http://www.opengis.net/kml/2.2\" xmlns:gx=\"http://www.google.com/kml/ext/2.2\" xmlns:kml=\"http://www.opengis.net/kml/2.2\" xmlns:atom=\"http://www.w3.org/2005/Atom\">\n");
-	fprintf(kmlfile, "<Document>\n");
-	fprintf(kmlfile, "\t<name>logstate</name>\n\t<open>1</open>\n\t<visibility>1</visibility>\n");
-	fprintf(kmlfile, "\t<Style id=\"sn_poly\">\n\t\t<PolyStyle>\n\t\t\t<fill>0</fill>\n\t\t\t<color>ff0000ff</color>\n\t\t\t<width>2</width>\n\t\t</PolyStyle>\n\t</Style>\n");
+	fprintf(fileout, "<?xml version=\"1.0\" encoding=\"UTF-8\"?>\n");
+	fprintf(fileout, "<kml xmlns=\"http://www.opengis.net/kml/2.2\" xmlns:gx=\"http://www.google.com/kml/ext/2.2\" xmlns:kml=\"http://www.opengis.net/kml/2.2\" xmlns:atom=\"http://www.w3.org/2005/Atom\">\n");
+	fprintf(fileout, "<Document>\n");
+	fprintf(fileout, "\t<name>logstate</name>\n\t<open>1</open>\n\t<visibility>1</visibility>\n");
+	fprintf(fileout, "\t<Style id=\"sn_poly\">\n\t\t<PolyStyle>\n\t\t\t<fill>0</fill>\n\t\t\t<color>ff0000ff</color>\n\t\t\t<width>2</width>\n\t\t</PolyStyle>\n\t</Style>\n");
 
 	printf("Converting...\n");
 
 	t = 0;
 	i = 0;
 	memset(line, 0, sizeof(line));
-	while (fgets3(logstatefile, line, sizeof(line)) != NULL) 
+	while (fgets3(filein, line, sizeof(line)) != NULL) 
 	{
 		t0 = t;
 		if (sscanf(line, "%lf;%lf;%lf;%lf;%lf;%lf;%lf;%lf;%lf;%lf;%lf;%lf;"
@@ -82,10 +109,10 @@ int main()
 				EnvCoordSystem2GPS(lat_env, long_env, alt_env, angle_env, xmin, ymin, z, &latmin, &longmin, &altitude);
 				EnvCoordSystem2GPS(lat_env, long_env, alt_env, angle_env, xmax, ymax, z, &latmax, &longmax, &altitude);
 
-				fprintf(kmlfile, "\t<Placemark>\n\t\t<visibility>0</visibility>\n\t\t<TimeStamp>\n\t\t\t<when>%.32s</when>\n\t\t</TimeStamp>\n\t\t<name>%d</name>\n\t\t<styleUrl>#sn_poly</styleUrl>\n\t\t<Polygon>\n\t\t\t<altitudeMode>clampToGround</altitudeMode>\n"
+				fprintf(fileout, "\t<Placemark>\n\t\t<visibility>0</visibility>\n\t\t<TimeStamp>\n\t\t\t<when>%.32s</when>\n\t\t</TimeStamp>\n\t\t<name>%d</name>\n\t\t<styleUrl>#sn_poly</styleUrl>\n\t\t<Polygon>\n\t\t\t<altitudeMode>clampToGround</altitudeMode>\n"
 					"\t\t\t<tessellate>1</tessellate>\n\t\t\t<outerBoundaryIs>\n\t\t\t\t<LinearRing>\n", timebuf, i);
 
-				fprintf(kmlfile, "\t\t\t\t\t<coordinates>"
+				fprintf(fileout, "\t\t\t\t\t<coordinates>"
 					"%f,%f,%f "
 					"%f,%f,%f "
 					"%f,%f,%f "
@@ -98,7 +125,7 @@ int main()
 					longmax, latmin, altitude, 
 					longmin, latmin, altitude);
 
-				fprintf(kmlfile, "\t\t\t\t</LinearRing>\n\t\t\t</outerBoundaryIs>\n\t\t</Polygon>\n\t</Placemark>\n");
+				fprintf(fileout, "\t\t\t\t</LinearRing>\n\t\t\t</outerBoundaryIs>\n\t\t</Polygon>\n\t</Placemark>\n");
 			}
 			i++;
 		}
@@ -109,14 +136,14 @@ int main()
 		memset(line, 0, sizeof(line));
 	}
 
-	fprintf(kmlfile, "</Document>\n</kml>\n");
+	fprintf(fileout, "</Document>\n</kml>\n");
 
 	printf("Found %u positions.\n", i);
 
-	if (fclose(kmlfile) != EXIT_SUCCESS) 
+	if (fclose(fileout) != EXIT_SUCCESS) 
 	{
 		printf("Error closing kml file.\n");
-		fclose(logstatefile);
+		fclose(filein);
 #ifdef _DEBUG
 		fprintf(stdout, "Press ENTER to continue . . . ");
 		(void)getchar();
@@ -124,7 +151,7 @@ int main()
 		return EXIT_FAILURE;
 	}
 
-	if (fclose(logstatefile) != EXIT_SUCCESS) 
+	if (fclose(filein) != EXIT_SUCCESS) 
 	{
 		printf("Error closing csv file.\n");
 #ifdef _DEBUG
